--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.0",
+    "react-router-hash-link": "^2.4.3",
     "recoil": "^0.7.7",
     "sort-by": "^1.2.0"
   },
