--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^6.14.0",
     "react-router-hash-link": "^2.4.3",
     "recoil": "^0.7.7",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "use-react-countries": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
